_sass/components/_boxes.scss
// Contains Features Styles

.location-box {
  padding: 68px 10px 30px;
  background-color: #FFF;
  border: 1px solid #E5E5E5;
  border-radius: 5px;
  text-align: center;
  position: relative;
  margin-top: 75px;

  @media screen and (min-width: $screen-lg-min) {
    padding: 68px 30px 30px;
  }

  &.connect {
    padding: 20px;
    margin-top: 0px;

    a {
      padding: 14px;
      display: inline-block;

      @media screen and (min-width: $screen-sm-min) {
        padding: 26px;
      }

      @media screen and (min-width: $screen-md-min) {
        padding: 18px;
      }

      @media screen and (min-width: $screen-lg-min) {
        padding: 22px;
      }
    }

    i {
      color: #57AF98;
      font-size: 26px;

      @media screen and (min-width: $screen-sm-min) {
        font-size: 34px;
      }
    }
  }

  .icon {
    background-color: transparent;
    position: absolute;
    top: -48px;
    left: 50%;
    margin: 0 0 0 -48px;
    width: 96px;
    border: none;
    height: auto;
    display: block;

    a {
      display: block;
      position: relative;
      width: 100%;
      height: 100%;
      color: #FFF;
    }

    i {
      font-size: 78px;
      color: #57AF98;
      line-height: 1;
      border: none;
      background-color: transparent;
      display: block;
      position: relative;
      width: 100%;
      height: 100%;
    }

  }

  h2 {
    font-size: 20px;
    color: #444;
    line-height: 1.5;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 1px;
    margin-bottom: 0;
  }

  p {
    font-size: 14px;
    margin-top: 5px;
    color: #444;
    font-weight: 300;
    font-family: 'Raleway', sans-serif;
    line-height: 1.5;
    letter-spacing: 1px;

    @media screen and (min-width: $screen-lg-min) {
      font-size: 16px;
    }
  }

  p.small {
    font-size: 14px;
    font-style: italic;
  }

  address {
    font-size: 14px;
    margin-top: 5px;
    margin-bottom: 0px;
    color: #444;
    font-weight: 300;
    font-family: 'Raleway', sans-serif;
    line-height: 1.5;
    letter-spacing: 1px;

    @media screen and (min-width: $screen-lg-min) {
      font-size: 16px;
    }
  }

}





p.color-presentation {
  color: #8b508d; // purple
}
p.color-interactive {
  color: #df877e; // orange
}
p.color-music {
  color: #017ecb; // blue
}
p.color-interview {
  color: #e3c75b; // yellow
}

.event-box {
  @extend .location-box;
  padding: 30px 15px;
  margin-top: 25px;
}

.event-box,
.lightbox .event-details {
  // @extend .location-box;
  // padding: 30px 15px;
  // margin-top: 25px;

  .event-type {
    p {
      margin-top: 0px;
      margin-bottom: 10px !important;
      font-size: 18px;

      font-weight: 300;
      font-family: 'Raleway', sans-serif;
      line-height: 1.5;
      letter-spacing: 1px;
    }
  }

  blockquote.event-timing:before {
    display: none;
  }

  blockquote.event-timing {
    max-width: 200px;
    h3.event-meta { margin-top: 0px; margin-bottom: 10px; }
    padding: 10px;
    background-color: #F9F9F9;
    font-style: normal;

    border: 1px solid #CCC;
    border-radius: 5px;
  }

  .addtocalendar {

    .atcb-link {
      text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
      border-radius: 3px;
    }

    .atcb-link:hover {
      text-decoration: underline;
      background: darken(#4281f4,8%);
    }
  }
}

.event-box .subnav-header,
.event-details .subnav-header {
  margin-bottom: 0px;

  h1, h3, h4 {
    margin-bottom: 10px;
  }

  h4 { margin-bottom: 20px; }

  h1 {
    // font-weight: bold;
    color: #000;
  }

  h3.event-meta,
  h4.event-meta {
    font-size: 16px;
    font-family: 'Lato', sans-serif;
    font-style: normal;
    color: #444;
  }

  h4 .emphasized-header {
    font-size: 18px;
    color: #444;
  }
}

.event-details .subnav-header {
  h4, blockquote.event-timing {
    margin-bottom: 30px;
  }
}


.event-details {

  .event-content {
    margin: auto;
    margin-bottom: 30px;

    @media screen and (min-width: $screen-lg-min) {
      max-width: 90%;
    }
  }

  blockquote:before {
    display: none;
  }

  blockquote.facilitator-section {

    display: flex;
    flex-direction: column;
    @media screen and (min-width: $screen-sm-min) {
      flex-direction: row;
    }
    justify-content: center;

    padding: 20px;
    margin-bottom: 30px;
    background-color: #F9F9F9;

    &:last-child {
      margin-bottom: 0px;
    }

    p:last-child {
      margin-bottom: 0px;
    }

    p.facilitator-photo {
      min-width: 30%;
      max-width: 66%;
      @media screen and (min-width: $screen-sm-min) {
        max-width: 40%;
      }
      @media screen and (min-width: $screen-md-min) {
        max-width: 35%;
      }
      @media screen and (min-width: $screen-lg-min) {
        max-width: 30%;
      }

      img {
        float: none;
        max-width: 100%;
      }
    }

    blockquote.facilitator-text {
      display: flex;
      flex-direction: column;
      justify-content: center;

      padding: 0px;

      @include word-wrap;

      .facilitator-bio {
        margin-bottom: 20px;
        text-align: justify;
      }

      .facilitator-link {
        margin-bottom: 0px;
        text-align: center;
      }
    }

    p.facilitator-photo,
    blockquote.facilitator-text {

      margin: 0px auto 20px;
      @media screen and (min-width: $screen-sm-min) {
        margin: 0px 10px;
      }
      @media screen and (min-width: $screen-md-min) {
        margin: 0px 15px;
      }
      @media screen and (min-width: $screen-lg-min) {
        margin: 0px 20px;
      }
    }

  }

}

